--- a/app/view/index/index.html
+++ b/app/view/index/index.html
@@ -1,11 +1,12 @@
+<!DOCTYPE HTML>
 <html>
+<head>
+    <meta charset="UTF-8">
+    <title><?php echo $sq ?></title>
+</head>
 <body>
-<?=$sq ?>
-<div style="width:300px; height: 50px; background: #f5f6f7;">
-    这是首页！
+<div style="margin:20px auto; padding:10px;width:300px; height: 50px; background: #f5f6f7; border-radius:5px;color:#363636 ">
+    <?php echo $sq ?>
 </div>
 </body>
-<head>
-
-</head>
 </html>
