--- a/app/view/index/index.html
+++ b/app/view/index/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
     <title><?php echo $sq ?></title>
+    <style type="text/css">
+        *{margin:0;padding:0}
+        body{background:#f5f6f7}
+        #myborder{background:#fff;width:600px;height:320px;position:fixed;left:50%;top:50%;z-index:11;margin:-200px 0 0 -350px;border-radius:5px}
+        #myTitle{height:50px;text-align:center;padding:30px;font-size:40px}
+        #myContent{height:50px;text-align:center;padding:30px;font-size:28px;color:#fff;background:#b9b9b9}
+        #myFoot{height:50px;text-align:center;padding:30px;font-size:22px}
+    </style>
 </head>
 <body>
-<div style="margin:20px auto; padding:10px;width:300px; height: 50px; background: #f5f6f7; border-radius:5px;color:#363636 ">
-    <?php echo $sq ?>
+<div id="myborder">
+    <div id="myTitle">
+        Congratulation
+    </div>
+    <div id="myContent">
+        <?php echo $sq ?>
+        {$sq}
+    </div>
+    <div id="myFoot">
+        精彩从现在开始
+    </div>
+
 </div>
 </body>
 </html>
