--- a/app/view/index/index.html
+++ b/app/view/index/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
-    <title><?php echo $sq ?></title>
+    <title>{$sq}</title>
     <style type="text/css">
         *{margin:0;padding:0}
         body{background:#f5f6f7}
@@ -18,7 +18,6 @@
         Congratulation
     </div>
     <div id="myContent">
-        <?php echo $sq ?>
         {$sq}
     </div>
     <div id="myFoot">
